(+) New core field 'Information' to output HTML text in entry form and/or DV and/or vCard

--- a/Site/media/less/icons.less
+++ b/Site/media/less/icons.less
@@ -4,6 +4,9 @@
   }
 }
 
+.SobiPro a [class^="icon-"], .SobiPro a [class*=" icon-"] {
+    background-image: none;
+}
 /** For Joomla! 3.0 default template */
 .SobiPro [class^="icon-"]::before, .SobiPro [class*=" icon-"]::before {
   font-family: 'FontAwesome';
