--- a/Site/media/css/icons.css
+++ b/Site/media/css/icons.css
@@ -1,4 +1,4 @@
-.SobiPro [class^="icon-"]::before,.SobiPro [class*=" icon-"]::before{font-family:'FontAwesome';font-style:normal;speak:none;color:inherit}.SobiPro .icon-eye:before{content:"\f06e"}.SobiPro{/*!
+.SobiPro a [class^="icon-"],.SobiPro a [class*=" icon-"]{background-image:none}.SobiPro [class^="icon-"]::before,.SobiPro [class*=" icon-"]::before{font-family:'FontAwesome';font-style:normal;speak:none;color:inherit}.SobiPro .icon-eye:before{content:"\f06e"}.SobiPro{/*!
  *  Font Awesome 3.2.1
  *  the iconic font designed for Bootstrap
  *  ------------------------------------------------------------------------------
