New default template (Part 11), default2 removed

--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -403,6 +403,7 @@
 }
 .SobiPro .spAlert {
     margin-bottom: 0;
+    margin-top: 20px;
     background-color: @alert-color;
     color: @active-color;
     border-color: darken(@alert-color,10%);
