New default template (Part 12)

--- a/Site/usr/templates/default3/themes/blackwidow.less
+++ b/Site/usr/templates/default3/themes/blackwidow.less
@@ -19,13 +19,14 @@
 // Use blackwidow for @colour-set in theme.less
 // ------------------------------------------------
 
-@base-color: #E5E5E5;
+@base-color: #fcca03; //must not be a dark color
 @text-color: #303030;
 @hover-color: #303030;
 @font-color: #FFFFFF;
-@active-color: #fcca03;
+@active-color: #E5E5E5; //must no be a dark color
 @alert-color: #B7B7B7;
-@important-color: #fcca03;
+@important-color: #CFA526;
+@error-color: #D63333;
 
 @back-color: #000000;
 @inverse: inverse;
