--- a/Site/usr/templates/default3/themes/malva.less
+++ b/Site/usr/templates/default3/themes/malva.less
@@ -22,6 +22,7 @@
 @base-color: #8D41AA;
 @text-color: #FFFFFF;
 @hover-color: #FFFFFF;
+@font-color: #333333;
 @active-color: #552768;
 @alert-color: #FFEC5C;
 @important-color: #8D41AA;
