New default template (Part 15)

--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -763,6 +763,13 @@
         color: @font-color;
     }
 }
+.SobiPro .spEntryCount {
+    font-size: 12px;
+    color: @font-color;
+}
+.SobiPro .spSubcats {
+    line-height: 15px;
+}
 
 // NoImge Setting
 // ----------------------------------------
