--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -58,6 +58,7 @@ body.contentpane a {
 }
 .modal-backdrop, .modal-backdrop.fade.in {
   opacity: 0.2;
+
 }
 .modal-backdrop {
   background-color: #000000;
@@ -76,7 +77,9 @@ body.contentpane a {
 .SobiPro .modal-body .btn {
   /*margin-bottom: 10px;*/
 }
-
+.SobiPro .modal.fade.in {
+    top: 40%;
+}
 #spIco .modal-body {
   padding: 0;
 }
